# wordorb-ros2

./: .gitignore  CMakeLists.txt  README.md  package.xml  push.sh  setup.cfg  setup.py
config/: word_orb_params.yaml
launch/: word_orb.launch.py
msg/: LessonData.msg  WordData.msg
srv/: LessonGet.srv  WordEnrich.srv  WordEthics.srv
test/: test_word_orb_client.py
wordorb_ros2/: __init__.py  word_orb_client.py  word_orb_node.py
